syntax = "proto3";

package com.project.userService;

message UserResponse {
  int64 id = 1;
  int64 chatId = 2;
  string username = 3;
}

message UserRequest {
  int64 id = 1;
}

service UserService {
  rpc getUserById(UserRequest) returns (UserResponse);
}